# astrolytics-desktop

./: README.md  package.json  rollup.config.js
playground/: README.md
playground/electron/: index.html  main.js  package.json  renderer.js
playground/tauri/src/: App.jsx  main.jsx
playground/tauri/src-tauri/: Cargo.toml
playground/tauri/src-tauri/src/: main.rs
src/: config.ts  device.ts  index.d.ts  index.ts  logger.ts  store.ts  types.ts  utils.ts
tauri/: Cargo.toml  README.md
