[package]
name = "astrolytics-tauri-utils"
version = "1.0.0"
authors = ["The Astrolytics Team <hello@astrolytics.io>"]
edition = "2021"
license = "MIT"
description = "Utilities for Astrolytics Tauri SDK"
homepage = "https://www.astrolytics.io"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "^1.4"
tauri = "^1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
